--- a/tutorials/component.ipynb
+++ b/tutorials/component.ipynb
@@ -6,11 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
     "from adalflow.core import Component, Generator\n",
-    "from adalflow.components.model_client import OpenAIClient\n",
-    "from adalflow.components.model_client import GroqAPIClient\n",
-    "from adalflow.utils import setup_env # make sure you have a .env file with OPENAI_API_KEY and GROQ_API_KEY"
+    "from adalflow.components.model_client import OpenAIClient"
    ]
   },
   {
@@ -74,10 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "doc = DocQA()"
+   ]
   },
   {
    "cell_type": "code",
@@ -235,7 +234,7 @@
     "save_pickle(states, \"doc.pkl\")\n",
     "\n",
     "# load the serialized states from a file\n",
-    "from adalflow.utils.file_io import load_pickle, load_json\n",
+    "from adalflow.utils.file_io import load_pickle\n",
     "states_loaded = load_pickle(\"doc.pkl\")\n",
     "# states_loaded = load_json(\"doc.json\")\n",
     "\n",
@@ -463,7 +462,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from adalflow.utils.file_io import save_json\n",
     "\n",
     "save_json(doc.to_dict(), \"doc.json\")"
    ]
@@ -624,7 +622,7 @@
     }
    ],
    "source": [
-    "from adalflow.core.component import Sequential\n",
+    "from adalflow import Sequential\n",
     "\n",
     "@fun_to_component\n",
     "def enhance_query(query:str) -> str:\n",
