--- a/tutorials/dataclass.ipynb
+++ b/tutorials/dataclass.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77,18 +77,18 @@
     }
    ],
    "source": [
-    "# it does not allow required field after optional field\n",
-    "@dataclass\n",
-    "class TrecData2:\n",
-    "    question: Question = field(\n",
-    "        metadata={\"desc\": \"The question asked by the user\"}\n",
-    "    ) # Required field, you have to provide the question field at the instantiation\n",
-    "    label: int = field(\n",
-    "        metadata={\"desc\": \"The label of the question\"}, default=0\n",
-    "    ) # Optional field\n",
-    "    metadata: dict = field(\n",
-    "        metadata={\"desc\": \"The metadata of the question\"}\n",
-    "    ) # required field"
+    "# # it does not allow required field after optional field\n",
+    "# @dataclass\n",
+    "# class TrecData2:\n",
+    "#     question: Question = field(\n",
+    "#         metadata={\"desc\": \"The question asked by the user\"}\n",
+    "#     ) # Required field, you have to provide the question field at the instantiation\n",
+    "#     label: int = field(\n",
+    "#         metadata={\"desc\": \"The label of the question\"}, default=0\n",
+    "#     ) # Optional field\n",
+    "#     metadata: dict = field(\n",
+    "#         metadata={\"desc\": \"The metadata of the question\"}\n",
+    "#     ) # required field"
    ]
   },
   {
