--- a/tutorials/react_note.ipynb
+++ b/tutorials/react_note.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from adalflow.components.agent import ReActAgent\n",
     "from adalflow.core import Generator, ModelClientType, ModelClient\n",
-    "from adalflow.utils import setup_env, get_logger\n",
+    "from adalflow.utils import setup_env\n",
     "\n",
     "# get_logger(level=\"DEBUG\")\n",
     "\n",
