--- a/tutorials/retriever.ipynb
+++ b/tutorials/retriever.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
    ],
    "source": [
     "# try to use title this time\n",
-    "document_map_func = lambda x: x[\"title\"] + \" \" + x[\"content\"]\n",
+    "document_map_func = lambda x: x[\"title\"] + \" \" + x[\"content\"] # no \n",
     "\n",
     "reranker.build_index_from_documents(documents=documents, document_map_func=document_map_func)\n",
     "\n",
@@ -1300,7 +1300,6 @@
     "\n",
     "from adalflow.tracing import trace_generator_call\n",
     "\n",
-    "from adalflow.utils import setup_env\n",
     "\n",
     "# 1. set up the tracing for failed call as the retriever has generator attribute\n",
     "\n",
