--- a/tutorials/tools.ipynb
+++ b/tutorials/tools.ipynb
@@ -17,7 +17,6 @@
    "source": [
     "from openai import OpenAI\n",
     "import json\n",
-    "from adalflow.utils import setup_env\n",
     "\n",
     "client = OpenAI()\n",
     "\n",
@@ -106,7 +105,7 @@
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
-    "from typing import Any, Dict, List, Tuple\n",
+    "from typing import Any, Dict, List\n",
     "import numpy as np\n",
     "import time\n",
     "import asyncio\n",
@@ -445,12 +444,10 @@
    "source": [
     "# call all the above functions \n",
     "import nest_asyncio\n",
-    "import asyncio\n",
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
     "\n",
-    "import time\n",
     "\n",
     "async def async_function_1():\n",
     "    await asyncio.sleep(1)\n",
@@ -1290,13 +1287,7 @@
     }
    ],
    "source": [
-    "import ast\n",
-    "import builtins\n",
-    "import contextlib\n",
-    "import ctypes\n",
-    "import sys\n",
     "import threading\n",
-    "import time\n",
     "\n",
     "# Define a list of safe built-ins\n",
     "SAFE_BUILTINS = {\n",
@@ -1787,7 +1778,6 @@
    "source": [
     "queries = [\"add 2 and 3\", \"search for something\", \"add points (1, 2) and (3, 4)\", \"sum numpy array with arr = np.array([[1, 2], [3, 4]])\", \"multiply 2 with local variable x\", \"divide 2 by 3\"]\n",
     "\n",
-    "from adalflow.components.output_parsers import ListOutputParser\n",
     "from adalflow.core.string_parser import JsonParser # improve a list of json\n",
     "\n",
     "preset_prompt_kwargs = {\n",
@@ -1982,9 +1972,6 @@
     "# first check the openai's function call apis\n",
     "\n",
     "from openai import OpenAI\n",
-    "from openai.types import FunctionDefinition\n",
-    "from adalflow.utils import setup_env\n",
-    "import json\n",
     "\n",
     "client = OpenAI()\n",
     "\n",
@@ -2242,8 +2229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adalflow_fn_schema =\n",
-    "{\n",
+    "adalflow_fn_schema ={\n",
     "        \"type\": \"object\",\n",
     "        \"properties\": {\n",
     "            \"weather\": {\n",
@@ -2284,31 +2270,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    llama_fn_schema = {\n",
-    "        \"type\": \"object\",\n",
-    "        \"properties\": {\"weather\": {\"$ref\": \"#/definitions/Weather\"}},\n",
-    "        \"required\": [\"weather\"],\n",
-    "        \"definitions\": {\n",
-    "            \"Weather\": {\n",
-    "                \"title\": \"Weather\",\n",
-    "                \"type\": \"object\",\n",
-    "                \"properties\": {\n",
-    "                    \"location\": {\n",
-    "                        \"title\": \"Location\",\n",
-    "                        \"desc\": \"The city and state, e.g. San Francisco, CA\",\n",
-    "                        \"type\": \"string\",\n",
-    "                    },\n",
-    "                    \"unit\": {\n",
-    "                        \"title\": \"Unit\",\n",
-    "                        \"enum\": [\"celsius\", \"fahrenheit\"],\n",
-    "                        \"type\": \"string\",\n",
-    "                    },\n",
+    "llama_fn_schema = {\n",
+    "    \"type\": \"object\",\n",
+    "    \"properties\": {\"weather\": {\"$ref\": \"#/definitions/Weather\"}},\n",
+    "    \"required\": [\"weather\"],\n",
+    "    \"definitions\": {\n",
+    "        \"Weather\": {\n",
+    "            \"title\": \"Weather\",\n",
+    "            \"type\": \"object\",\n",
+    "            \"properties\": {\n",
+    "                \"location\": {\n",
+    "                    \"title\": \"Location\",\n",
+    "                    \"desc\": \"The city and state, e.g. San Francisco, CA\",\n",
+    "                    \"type\": \"string\",\n",
     "                },\n",
-    "                \"required\": [\"location\", \"unit\"],\n",
-    "                \"additionalProperties\": false,\n",
-    "            }\n",
-    "        },\n",
-    "    }"
+    "                \"unit\": {\n",
+    "                    \"title\": \"Unit\",\n",
+    "                    \"enum\": [\"celsius\", \"fahrenheit\"],\n",
+    "                    \"type\": \"string\",\n",
+    "                },\n",
+    "            },\n",
+    "            \"required\": [\"location\", \"unit\"],\n",
+    "            \"additionalProperties\": False,\n",
+    "        }\n",
+    "    },\n",
+    "}"
    ]
   },
   {
@@ -2319,7 +2305,6 @@
    "source": [
     "# level 1, call function with default python data types\n",
     "# such as str, int, float, list, dict, etc.\n",
-    "\n",
     "def _get_current_weather(location: str, unit: str = \"fahrenheit\"):\n",
     "    \"\"\"Get the current weather in a given location\"\"\"\n",
     "    if \"tokyo\" in location.lower():\n",
