--- a/tutorials/generator.ipynb
+++ b/tutorials/generator.ipynb
@@ -44,7 +44,7 @@
    ],
    "source": [
     "from adalflow.core import Generator\n",
-    "from adalflow.components.model_client import OpenAIClient, get_all_messages_content, get_probabilities\n",
+    "from adalflow.components.model_client import OpenAIClient, get_probabilities\n",
     "from adalflow.utils import enable_library_logging\n",
     "\n",
     "enable_library_logging(level=\"DEBUG\")\n",
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from adalflow.core import Component, Generator, Prompt\n",
+    "from adalflow.core import Component, Generator\n",
     "from adalflow.components.model_client import GroqAPIClient\n",
     "from adalflow.utils import setup_env # noqa\n",
     "\n",
