docs: add Colab and GitHub links to model client tutorial

--- a/notebooks/tutorials/adalflow_modelclient.ipynb
+++ b/notebooks/tutorials/adalflow_modelclient.ipynb
@@ -6,9 +6,15 @@
     "id": "hGLYrUwBmvUD"
    },
    "source": [
-    "<a target=\"_blank\" href=\"https://colab.research.google.com/github.com/SylphAI-Inc/AdalFlow/blob/main/notebooks/tutorials/adalflow_modelclient.ipynb\">\n",
-    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
-    "</a>\n"
+    "<div style=\"display: flex; justify-content: flex-start; align-items: center; gap: 15px; margin-bottom: 20px;\">\n",
+    "  <a target=\"_blank\" href=\"https://colab.research.google.com/github.com/SylphAI-Inc/AdalFlow/blob/main/notebooks/tutorials/adalflow_modelclient.ipynb\">\n",
+    "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "  </a>\n",
+    "  <a href=\"https://github.com/SylphAI-Inc/AdalFlow/blob/main/tutorials/adalflow_modelclient_sync_and_async.py\" target=\"_blank\" style=\"display: flex; align-items: center;\">\n",
+    "      <img src=\"https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png\" alt=\"GitHub\" style=\"height: 20px; width: 20px; margin-right: 5px;\">\n",
+    "      <span style=\"vertical-align: middle;\"> Open Source Code [Partial]</span>\n",
+    "  </a>\n",
+    "</div>"
    ]
   },
   {
