edit imports in .ipynb

--- a/use_cases/question_answering/chatbot.ipynb
+++ b/use_cases/question_answering/chatbot.ipynb
@@ -20,9 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import needed modules from LightRAGfrom adalflow.core.component import Component\n",
-    "from adalflow.core.generator import Generator\n",
-    "from adalflow.components.memory.memory import Memory"
+    "from IPython.display import clear_output\n",
+    "!pip install -U adalflow[openai,groq,faiss-cpu]\n",
+    "clear_output()"
    ]
   },
   {
@@ -31,9 +31,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Here, we use the OpenAIClient as an example, but you can use any other clients (with the corresponding API Key as needed), such as AnthropicAPIClient\n",
-    "from adalflow.components.model_client import OpenAIClient\n",
-    "OPENAI_API_KEY=\"YOUR_API_KEY\" # Replace with your OpenAI API Key, or you can put it in a .env file"
+    "# Import needed modules from Adalflow\n",
+    "import os\n",
+    "from getpass import getpass\n",
+    "from adalflow.core.component import Component\n",
+    "from adalflow.core.generator import Generator\n",
+    "from adalflow.components.memory.memory import Memory\n",
+    "from adalflow.components.model_client import OpenAIClient  # Here, we use the OpenAIClient as an example, but you can use any other clients (with the corresponding API Key as needed), such as AnthropicAPIClient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prompt user to enter their API keys securely\n",
+    "openai_api_key = getpass(\"Please enter your OpenAI API key: \")\n",
+    "# Set environment variables\n",
+    "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
+    "# Replace with your OpenAI API Key, or you can put it in a .env file"
    ]
   },
   {
@@ -48,7 +65,7 @@
     "        super().__init__()\n",
     "        self.generator = Generator(\n",
     "            model_client=OpenAIClient(),\n",
-    "            model_kwargs={'model': 'gpt-3.5-turbo'}\n",
+    "            model_kwargs={'model': 'gpt-4o-mini'}\n",
     "        )\n",
     "        self.chat_history = Memory() # Memory to store the chat history\n",
     "    \n",
